--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 *{
     margin: 0px;
@@ -14,7 +15,7 @@
 }
 
 body{
-    font-family: "Inter", sans-serif;
+    font-family: "Poppins", sans-serif;
     background: var(--cor3);
     color: var(--cor2);
 }
@@ -33,50 +34,57 @@ h1{
     text-align: center;
 }
 
-.text_homepage{
+h2{
     text-align: center;
-    font-size: 13pt;
+    margin: 10px;
 }
 
 .img_container{
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
 }
 
 img{
-    width: 400px;
-    height: 300px;
-    margin: 10px;
-    transition: 500ms;
-    border-radius: 13px;
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
 }
 
-img:hover{
-    box-shadow: 1px 1px 10px var(--cor2);
-    transform: scale(1.05);
+.imagem{
+    position: relative;
+    transition: 0.5s;
 }
 
-.btn_start_homepage{
-    cursor: pointer;
-    width: 145px;
-    padding: 8px;
-    font-family: "Inter", sans-serif;
-    font-size: 13pt;
-    font-weight: bold;
-    border: none;
-    border-radius: 8px;
-    background-color: var(--cor2);
-    color: var(--cor3);
-}
-
-.btn_start_homepage:hover{
-    background-color: var(--cor4);
-    box-shadow: 1px 1px 10px var(--cor4);
-}
-
-h2{
+.imagem::before{
+    content: attr(data-text);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 10px;
+    font-size: 12.5pt;
     text-align: center;
-    margin: 10px;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    background-color: var(--cor3);
+    color: var(--cor2);
+}
+
+.imagem:hover::before{
+    cursor: pointer;
+    opacity: 1;
+    box-shadow: 1px 1px 10px var(--cor2);   
+}
+
+.text{
+    width: 35%;
+    margin: 0 auto;
+    text-align: justify;
 }
