Finalizando style form demo.

--- a/style/demo_style.css
+++ b/style/demo_style.css
@@ -48,9 +48,13 @@ form{
     
 }
 
-
 #btn_salvar_player{
+    background-color: var(--cor1);
+    color: white;
+    font-size: 11pt;
+    font-weight: bold;
+    border: none;
     cursor: pointer;
     padding: 5px;
-     
+
 }
