Finalizando css demo

--- a/style/rodar_demo_style.css
+++ b/style/rodar_demo_style.css
@@ -47,7 +47,7 @@ main{
     gap: 25px;
 }
 
-.question{
+.questions{
     font-size: 24px;
     font-weight: bold;
     text-align: center;
@@ -60,15 +60,11 @@ main{
     gap: 16px;
 }
 
-.controls-container{
-    margin-right: -17px;
-}
-
 .next-question{
     margin-top: 32px;
 }
 
-.button{
+button{
     height: 45px;
     padding: 0 32px;
     border: none;
@@ -81,10 +77,32 @@ main{
     cursor: pointer;
 }
 
-.button:hover{
+button:not(:disabled):hover{
     filter: brightness(0.8);
 }
 
 .hide{
     display: none;
+}
+
+.correct{
+    background-color: rgb(35, 220, 60);
+}
+
+.incorrect{
+    background-color: rgb(208, 23, 23);
+}
+
+.answer:disabled{
+    cursor: not-allowed;
+}
+
+.final-message{
+    font-size: 20px;
+    text-align: center;
+}
+
+.final-message span{
+    display: block;
+    margin-top: 8px;
 }
