--- a/style/rodar_demo_style.css
+++ b/style/rodar_demo_style.css
@@ -11,6 +11,7 @@
     --cor2: #2BDEFD;
     --cor3: #01080eea;
     --cor4: #2BFDBE;
+    --cor5: #151C21;
 }
 
 body {
@@ -35,7 +36,8 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 16px;
+    padding: 20px;
+    background-color: var(--cor5);
 }
 
 .questions-container{
@@ -51,6 +53,8 @@ main{
     font-size: 24px;
     font-weight: bold;
     text-align: center;
+    color: var(--cor4);
+    margin-bottom: 10px;
 }
 
 .answers-container{
@@ -100,9 +104,11 @@ button:not(:disabled):hover{
 .final-message{
     font-size: 20px;
     text-align: center;
+    color: var(--cor4);
 }
 
 .final-message span{
     display: block;
     margin-top: 8px;
+    color: red;
 }
