--- a/style/index.css
+++ b/style/index.css
@@ -49,7 +49,7 @@ h2{
 
 img{
     width: 300px;
-    height: 300px;
+    height: 200px;
     border-radius: 10px;
 }
 
@@ -94,7 +94,26 @@ img{
     text-align: center;
 }
 
+.logo img{
+    width: 325px;
+    height: 270px;
+}
+
 .copy{
     font-weight: bolder;
     font-size: 10pt;
+}
+
+@media only screen and (max-width: 630px){
+    .text{
+        width: 65%;
+        text-align: center;
+        padding: 10px;
+    }
+}
+
+@media only screen and (max-width: 670px){
+    .img_container{
+        flex-wrap: wrap;
+    }
 }
