--- a/style/rodar_demo_style.css
+++ b/style/rodar_demo_style.css
@@ -14,17 +14,114 @@
     --cor5: #151C21;
 }
 
-body {
-    font-family: "Poppins", sans-serif;
+body{
     background: var(--cor3);
-    color: var(--cor2);
 }
 
-main{
+main{ 
+    font-family: "Poppins", sans-serif;
+    color: var(--cor2);
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.conteudo{ 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.text{
+    text-align: center;
+    margin: 20px 0px auto;
+}
+
+.container_form{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.form1{
+    width: 120%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px var(--cor2);
+}
+
+.pontos{
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.nome_players{
+    width: 60%;
+    height: 30px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+
+.qtd_pontos{
+    height: 30px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+
+.btn_cadastrar{
+    height: 35px;
+    width: 33%;
+    cursor: pointer;
+    margin-top: 5px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bolder;
+    font-size: 11pt;
+    background-color: var(--cor1);
+    color: white;
+    transition: filter 0.2s;
+}
+
+.btn_cadastrar:not(:disabled):hover{
+    filter: brightness(0.8);
+}
+
+.btn_concluir{
+    height: 35px;
+    width: 33%;
+    cursor: pointer;
+    margin-top: 5px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bolder;
+    font-size: 11pt;
+    background-color: var(--cor1);
+    color: white;
+    transition: filter 0.2s;
+}
+
+.btn_concluir:not(:disabled):hover{
+    filter: brightness(0.8);
 }
 
 .container{
