--- a/style/rodar_demo_style.css
+++ b/style/rodar_demo_style.css
@@ -29,7 +29,7 @@ main{
 
 }
 
-.conteudo{ 
+.conteudo_form{ 
     width: 100%;
     height: 100%;
     display: flex;
@@ -51,27 +51,19 @@ main{
     justify-content: center;
 }
 
-.form1{
-    width: 120%;
+.form{
+    width: 121%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px var(--cor2);
 }
 
-.pontos{
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    align-items: center;
-    justify-content: center;
-}
-
-.nome_players{
+.txt_nome_players{
     width: 60%;
     height: 30px;
     padding: 10px;
@@ -80,12 +72,16 @@ main{
     outline: none;
 }
 
-.qtd_pontos{
+.txt_qtd_pontos{
     height: 30px;
     padding: 10px;
     border-radius: 5px;
     border: none;
     outline: none;
+}
+
+.btn_concluir{
+    margin-top: 20px;
 }
 
 .btn_cadastrar{
@@ -106,25 +102,17 @@ main{
     filter: brightness(0.8);
 }
 
-.btn_concluir{
-    height: 35px;
-    width: 33%;
-    cursor: pointer;
-    margin-top: 5px;
-    border: none;
-    border-radius: 5px;
-    font-weight: bolder;
-    font-size: 11pt;
-    background-color: var(--cor1);
-    color: white;
-    transition: filter 0.2s;
+ul{
+    list-style: none;
+    padding: 0;
 }
 
-.btn_concluir:not(:disabled):hover{
-    filter: brightness(0.8);
+ul li{
+    list-style: none;
+    padding: 5px 0px;
 }
 
-.container{
+.container_perguntas{
     width: 90%;
     max-width: 800px;
     border-radius: 6px;
